--- a/4.html
+++ b/4.html
@@ -14,6 +14,24 @@
           <li><a href="3.html">JavaScript</a></li>
           <li><a href="4.html">React</a></li>
         </ol>
+        <input id="night_day" type="button" value="day" onclick="
+                                      let target = document.querySelector('body');
+                              if(this.value=='night'){
+                              document.querySelector('body').style.backgroundColor='black';
+                                document.querySelector('body').style.color='white';
+                                  document.querySelector('#night_day').value='day'
+                                    var i=0;
+                                    while (i<document.querySelectorAll('a').length){document.querySelectorAll('a')[i].style.color='powderblue';
+                                    i=i+1;}                                             
+                                      }else{
+                              document.querySelector('body').style.backgroundColor='white';
+                                document.querySelector('body').style.color='black';
+                                  document.querySelector('#night_day').value='night'
+                                var i=0;
+                                    while (i<document.querySelectorAll('a').length){document.querySelectorAll('a')[i].style.color='blue';
+                                    i=i+1;}     }                                           
+                                                                                  
+                          ">
       </div>
       <div>
         <h2>React</h2>
